...
            isValidateField = isFormatValidEmail,
            errorMessage = MessageErrorForBadFormatInFormsFields.EMAIL_FORMAT_BAD,
            onValueChange= {email = it}
        )
        inputPassword(
            value = password,
            labelName = "Senha",
            isValidateField = isFormatValidPassword,
            errorMessage = MessageErrorForBadFormatInFormsFields.PASSWORD_FORMAT_BAD,
            onValueChange = {password = it}
        )
        Button(40.dp,100.dp,
            { login(viewModelEmail)})
...
